# djdownloader

./: .gitignore  LICENSE  README.md  pyproject.toml
mysite/: manage.py
mysite/mysite/: asgi.py  settings.py  wsgi.py
src/djdownloader/: admin.py  apps.py  backoff.py  download.py  models.py  storage.py
src/djdownloader/management/commands/: djdownloader.py
src/djdownloader/migrations/: 0001_initial.py
