# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "djdownloader"
version = "0.0.1"
authors = [
  { name="Eugene Rabtsau", email="e.ryabtsev@gmail.com" },
]
description = "DjDownloader: Django Download Worker"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
  "Django"
]

[project.urls]
Source = "https://github.com/ryabtsev/djdownloader"
